[package]
name = "tray_rust"
version = "0.0.1"
authors = ["Will Usher <will@willusher.io>"]

[[bin]]
name = "tray_rust"
doc = false

[dependencies]
enum-set = "0.0.6"
rand = "0.3.15"
rustc-serialize = "0.3.22"
docopt = "0.7.0"
image = "0.12.3"
num_cpus = "1.2.1"
tobj = "0.1.2"
byteorder = "1.0.0"
serde_json = "0.9.8"
scoped_threadpool = "0.1.7"
bspline = "0.2.2"
bincode = "0.6.1"
mio = "0.5.1"
la = "0.2.0"
clippy = { version = "0.0.114", optional = true }

[profile.release]
# How to send extra compiler flag for -march=native equivalent in Rust
# flag is `-C target-cpu=native`
opt-level = 3
debug = false
rpath = false
lto = true

[features]
unstable = ["clippy"]
